--- a/pom.xml
+++ b/pom.xml
@@ -77,11 +77,11 @@
 			<artifactId>mockito-all</artifactId>
 			<version>1.9.5</version>
 		</dependency>
-		<dependency>
-			<groupId>com.lordofthejars</groupId>
-			<artifactId>nosqlunit-mongodb</artifactId>
-			<version>0.7.6</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>com.lordofthejars</groupId> -->
+<!-- 			<artifactId>nosqlunit-mongodb</artifactId> -->
+<!-- 			<version>0.7.6</version> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>com.github.fakemongo</groupId>
 			<artifactId>fongo</artifactId>
