--- a/pom.xml
+++ b/pom.xml
@@ -77,11 +77,7 @@
 			<artifactId>mockito-all</artifactId>
 			<version>1.9.5</version>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>com.lordofthejars</groupId> -->
-<!-- 			<artifactId>nosqlunit-mongodb</artifactId> -->
-<!-- 			<version>0.7.6</version> -->
-<!-- 		</dependency> -->
+
 		<dependency>
 			<groupId>com.github.fakemongo</groupId>
 			<artifactId>fongo</artifactId>
@@ -142,9 +138,9 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-maven-plugin</artifactId>
-				<version>9.4.3-SNAPSHOT</version>
+			  <groupId>org.eclipse.jetty</groupId>
+			  <artifactId>jetty-maven-plugin</artifactId>
+			  <version>9.0.5.v20130815</version>
 			</plugin>
 		</plugins>
 	</build>
